--- a/index.html
+++ b/index.html
@@ -331,9 +331,10 @@
           border: 1px #eee solid;
           margin: 10px 0 70px;
           font-family: Arial, Helvetica, sans-serif;
+          color: black !important;
         }
         .preview:visited {
-          color: initial;
+          color: black !important;
         }
         .preview > .text {
           padding: 10px 20px;
