--- a/index.html
+++ b/index.html
@@ -70,18 +70,8 @@
       as="script"
     />
     <link
-      rel="author"
-      href="https://medium.com/@concernedelephant"
-      data-rh="true"
-    />
-    <link
       rel="canonical"
-      href="https://medium.com/@concernedelephant/story-of-ryan-widgeon-200k-facebook-airbnb-job-in-4-easy-steps-7ee5ad34fd8e"
-      data-rh="true"
-    />
-    <link
-      rel="alternate"
-      href="android-app://com.medium.reader/https/medium.com/p/7ee5ad34fd8e"
+      href="https://ryanwidgeon.com/"
       data-rh="true"
     />
     <meta property="og:type" content="article" data-rh="true" />
@@ -130,12 +120,12 @@
     <meta property="twitter:description" content="Tl;dr" data-rh="true" />
     <meta
       property="og:url"
-      content="https://medium.com/@concernedelephant/story-of-ryan-widgeon-200k-facebook-airbnb-job-in-4-easy-steps-7ee5ad34fd8e"
+      content="https://ryanwidgeon.com/"
       data-rh="true"
     />
     <meta
       property="al:web:url"
-      content="https://medium.com/@concernedelephant/story-of-ryan-widgeon-200k-facebook-airbnb-job-in-4-easy-steps-7ee5ad34fd8e"
+      content="https://ryanwidgeon.com/"
       data-rh="true"
     />
     <meta
@@ -149,11 +139,6 @@
       data-rh="true"
     />
     <meta name="twitter:card" content="summary_large_image" data-rh="true" />
-    <meta
-      property="article:author"
-      content="https://medium.com/@concernedelephant"
-      data-rh="true"
-    />
     <meta name="author" content="Mysterious Elephant" data-rh="true" />
     <meta
       name="robots"
