--- a/index.html
+++ b/index.html
@@ -190,6 +190,14 @@
     </style>
   </head>
   <body>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180179405-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-180179405-1');
+  </script>
     <article>
       <title>
         Story of Ryan Widgeon: 200k Facebook/Airbnb job in 4 easy steps
